--- a/jetstream/ios-felt-privacy-simplified-nav-and-felt-deletion-v2.toml
+++ b/jetstream/ios-felt-privacy-simplified-nav-and-felt-deletion-v2.toml
@@ -32,3 +32,39 @@ from_expression = """
     )
     """
 submission_date_column = "exposure_date"
+
+#[metrics]
+
+#overall = ['serp_ad_clicks_lm', 'search_count_lm', 'active_hours_lm', 'days_of_use_lm']
+#weekly = ['serp_ad_clicks_lm', 'search_count_lm', 'active_hours_lm', 'days_of_use_lm']
+
+#[metrics.serp_ad_clicks_lm]
+#friendly_name = "Ad Clicks"
+#description = "Number of ad clicks on a search engine results page."
+#select_expression = "{{agg_sum('ad_click')}}"
+#data_source = "mobile_search_clients_engines_sources_daily"
+
+[metrics.serp_ad_clicks.statistics.bootstrap_mean_linear_model]
+[metrics.serp_ad_clicks.statistics.bootstrap_mean_linear_model.covariate_adjustment]
+metric = 'serp_ad_clicks'
+period = 'preenrollment_week'
+
+
+
+[metrics.search_count.statistics.bootstrap_mean_linear_model]
+[metrics.search_count.statistics.bootstrap_mean_linear_model.covariate_adjustment]
+metric = 'search_count'
+period = 'preenrollment_week'
+
+
+[metrics.active_hours.statistics.bootstrap_mean_linear_model]
+[metrics.active_hours.statistics.bootstrap_mean_linear_model.covariate_adjustment]
+metric = 'active_hours'
+period = 'preenrollment_week'
+
+[metrics.days_of_use.statistics.bootstrap_mean_linear_model]
+drop_highest = 0.0
+[metrics.days_of_use.statistics.bootstrap_mean_linear_model.covariate_adjustment]
+metric = 'days_of_use'
+period = 'preenrollment_week'
+
