--- a/jetstream/defaults/firefox_desktop.toml
+++ b/jetstream/defaults/firefox_desktop.toml
@@ -103,3 +103,60 @@ drop_highest = 0
 
 [metrics.client_level_daily_active_users_v1.statistics.per_client_dau_impact]
 pre_treatments = ['normalize_over_analysis_period']
+
+
+#  "active_hours",
+#  "ad_clicks",
+#  "days_of_use",
+#  "organic_search_count",
+#  "search_count",
+#  "searches_with_ads",
+#  "tagged_search_count",
+#  "tagged_follow_on_search_count",
+#  "uri_count",
+#  "qualified_cumulative_days_of_use",
+#  "is_default_browser",
+#  "client_level_daily_active_users_v1",
+
+[metrics.active_hours.statistics.linear_model_mean]
+[metrics.active_hours.statistics.linear_model_mean.covariate_adjustment]
+period = "preenrollment_week"
+
+[metrics.ad_clicks.statistics.linear_model_mean]
+[metrics.ad_clicks.statistics.linear_model_mean.covariate_adjustment]
+period = "preenrollment_week"
+
+[metrics.qualified_cumulative_days_of_use.statistics.linear_model_mean]
+drop_highest = 0.0
+[metrics.qualified_cumulative_days_of_use.statistics.linear_model_mean.covariate_adjustment]
+period = "preenrollment_week"
+
+[metrics.organic_search_count.statistics.linear_model_mean]
+[metrics.organic_search_count.statistics.linear_model_mean.covariate_adjustment]
+period = "preenrollment_week"
+
+[metrics.search_count.statistics.linear_model_mean]
+[metrics.search_count.statistics.linear_model_mean.covariate_adjustment]
+period = "preenrollment_week"
+
+[metrics.searches_with_ads.statistics.linear_model_mean]
+[metrics.searches_with_ads.statistics.linear_model_mean.covariate_adjustment]
+period = "preenrollment_week"
+
+[metrics.tagged_search_count.statistics.linear_model_mean]
+[metrics.tagged_search_count.statistics.linear_model_mean.covariate_adjustment]
+period = "preenrollment_week"
+
+[metrics.tagged_follow_on_search_count.statistics.linear_model_mean]
+[metrics.tagged_follow_on_search_count.statistics.linear_model_mean.covariate_adjustment]
+period = "preenrollment_week"
+
+[metrics.uri_count.statistics.linear_model_mean]
+[metrics.uri_count.statistics.linear_model_mean.covariate_adjustment]
+period = "preenrollment_week"
+
+[metrics.is_default_browser.statistics.linear_model_mean]
+drop_highest = 0.0
+[metrics.is_default_browser.statistics.linear_model_mean.covariate_adjustment]
+period = "preenrollment_week"
+
